Fix feedback link alignment issue

--- a/public/stylesheets/sass/prototypes.scss
+++ b/public/stylesheets/sass/prototypes.scss
@@ -6,3 +6,8 @@
 input[type="text"] {
   margin:0;
 }
+
+.report-a-problem-toggle-wrapper,
+.report-a-problem-content {
+ text-align:left;
+}
